// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navbar > events > left-click 1`] = `
<div
  class="t-navbar t-navbar--fixed t-safe-area-top t-navbar--visible-animation"
  style="position: fixed;"
>
  <div
    class="t-navbar____placeholder"
  />
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="app"
        >
          <g
            id="fill1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              fill="transparent"
            />
            <path
              d="M14 14H21V21H14V14Z"
              fill="transparent"
            />
            <path
              d="M3 14H10V21H3V14Z"
              fill="transparent"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            fill="transparent"
            id="fill2"
          />
          <g
            id="stroke1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M14 14H21V21H14V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M3 14H10V21H3V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            id="stroke2"
            stroke="currentColor"
            stroke-width="2"
          />
        </g>
      </svg>
      
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <span
        class="t-navbar__center-title"
      >
        标题
      </span>
    </div>
    <!---->
  </div>
</div>
`;

exports[`navbar > events > right-click 1`] = `
<div
  class="t-navbar t-navbar--fixed t-safe-area-top t-navbar--visible-animation"
  style="position: fixed;"
>
  <div
    class="t-navbar____placeholder"
  />
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      <!---->
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <span
        class="t-navbar__center-title"
      >
        标题
      </span>
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="app"
        >
          <g
            id="fill1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              fill="transparent"
            />
            <path
              d="M14 14H21V21H14V14Z"
              fill="transparent"
            />
            <path
              d="M3 14H10V21H3V14Z"
              fill="transparent"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            fill="transparent"
            id="fill2"
          />
          <g
            id="stroke1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M14 14H21V21H14V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M3 14H10V21H3V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            id="stroke2"
            stroke="currentColor"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </div>
  </div>
</div>
`;
